--- a/style.css
+++ b/style.css
@@ -210,15 +210,15 @@ li.dropdown-item:focus {
 .game-img-card > img.save-icon{
   position:absolute;
   /* place it in the corner, inset a little */
-  top:.5rem;                  /* ↙ adjust these two values */
-  right:0.25rem;
+  top:.17rem;                  /* ↙ adjust these two values */
+  right:0.15rem;
 
   width:clamp(28px, 9%, 42px);/* scales with photo but never too tiny/huge */
   aspect-ratio: 1/1;
   aspect-ratio:1;
   opacity:1;                 /* watermark look — lower = lighter */
   pointer-events: visibleFill; /* optional white outline */
-  border-radius: 4px; 
+  border-radius: 9px; 
   transition: .2s ease; 
   /* optional glow that hugs the transparent shape */
   
@@ -272,5 +272,9 @@ div .card{
     flex-direction: column;
     gap: 1em;
     position:relative;
+}
+div.game-img-card > img.save-icon {
+    width: 35px;
+    height: 35px;
 }
  
