--- a/homepage.css
+++ b/homepage.css
@@ -14,7 +14,7 @@
     margin-right: -10px;
     margin-top: -10px;
     align-content: center;
-    text-align: center;
+    text-align: start;
 }
  
 .header-text {
@@ -26,11 +26,12 @@
     
     display: flex;
     justify-content: center;
-    
+    justify-self: center;
+    align-self: center;
 
 }
 
-a[href="homepage.html"] {
+a {
     text-decoration: none;
     color: inherit;
     justify-content: center;
@@ -41,16 +42,25 @@ a[href="homepage.html"] {
 .header-link{
     text-decoration: none;
     color: inherit;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    justify-content: center;
-    width: 27%;
+    max-width: fit-content;
+    min-width: 0;
+    white-space: normal;
+    overflow-wrap: anywhere;
+    flex: 0 0 auto;
+    
+    
 
 }
-.header-link:hover {
+.header-link:hover .header-text {
     text-decoration: none;
     color: inherit;
-    box-shadow: #000000 0 0 10px;
+    text-shadow: #000000 0 0 10px;
+} 
+.header-link:hover #tentacles{  
+    filter: drop-shadow(0 0 10px #000000);
+
 }
 body {
     font-family: 'Cabin' ;
